hard-gists/4996449/run.log
=== Docker Run Log for 4996449 ===
Started at: Mi 29. Okt 15:05:43 CET 2025

[2025-10-29 15:05:44] START: Running container for 4996449
[2025-10-29 15:05:44] SUCCESS: Container 267b5145b7a32ea040d4833125304ebf1414deedc9122288760145e4114979d5 started for 4996449
=== Container logs for 4996449 ===
  File "/snippet.py", line 38
    except urllib2.HTTPError, ex:
           ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 4996449 ===
[2025-10-29 15:05:46] INFO: Container 267b5145b7a32ea040d4833125304ebf1414deedc9122288760145e4114979d5 has stopped
